--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .header {
     font-size: 20px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 #array {
@@ -32,6 +33,14 @@
     margin-top: -20px;
     width: 100%;
     text-align: center;
+}
+
+#searchNumber {
+    display: block;
+    margin: 20px auto;
+    padding: 10px;
+    width: 200px;
+    font-size: 16px;
 }
 
 #message {
